[project]
name = "pgt-agent"
version = "0.1.0"
description = "PGT Agent for Harbor framework"
readme = "README.md"
authors = [
    { name = "sakura501", email = "sakura501.top@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "harbor>=0.1.45",
    "openai>=1.0.0",
]

[project.scripts]
pgt-agent = "pgt_agent:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
